--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/libs/reset.css">
     <title>Document</title>
 </head>
 <body>
@@ -62,8 +63,36 @@
         </div>
 
         <div class="hot-deal"></div>
-        <div class="rising-keyword"></div>
-        <div class="recommendation"></div>
+        <div class="rising-keyword">
+            <ul>
+                <li class="rising-keyword__item"></li>
+                <li class="rising-keyword__item"></li>
+                <li class="rising-keyword__item"></li>
+                <li class="rising-keyword__item"></li>
+                <li class="rising-keyword__item"></li>
+                <li class="rising-keyword__item"></li>
+                <li class="rising-keyword__item"></li>
+            </ul>
+
+        </div>
+        <div class="recommendation">
+            <ul class="picked-items">
+                <li class="picked-items__item"></li>
+                <li class="picked-items__item"></li>
+                <li class="picked-items__item"></li>
+                <li class="picked-items__item"></li>
+            </ul>
+            <ul class="recommendation-items">
+                <li class="recommendation-items__item"></li>
+                <li class="recommendation-items__item"></li>
+                <li class="recommendation-items__item"></li>
+                <li class="recommendation-items__item"></li>
+                <li class="recommendation-items__item"></li>
+                <li class="recommendation-items__item"></li>
+                <li class="recommendation-items__item"></li>
+                <li class="recommendation-items__item"></li>
+            </ul>
+        </div>
 
     </div>
     <footer></footer>
