feat. header markup & styles

--- a/app/index.html
+++ b/app/index.html
@@ -5,19 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/libs/reset.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/app.css">
     <title>Document</title>
 </head>
 <body>
     <header>
 
         <div class="header-top">
-            <div class="title"></div>  
+            <div class="title"><h1>쇼핑하우</h1></div>  
             <div class="search">
                 <form >
                     <input type="text" class="search__input">
-                    <button class="search__icon"></button>
+                    <button class="search__icon">🔍</button>
                 </form>
-                <div class="search__top10"></div>
+                <ul class="search-top10">
+                    <li class="search-top10__item">3. 아디다스 런닝화</li>
+                </ul>
             </div>  
         </div>
 
