feat. main menu layout step1

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 
         <div class="header-menu">
             <div class="category">
+                <button class="category__title">카테고리</button>
                 <ul class="category-first">
                     <li></li>
                     <li></li>
@@ -46,7 +47,13 @@
                     <li></li>
                 </ul> 
             </div>
-            <div class="top-menu"></div>
+            <div class="gubun-bar"></div>
+            <ul class="top-menu">
+                <li class="top-menu__item">핫딜</li>
+                <li class="top-menu__item">베스트100</li>
+                <li class="top-menu__item">할인특가</li>
+                <li class="top-menu__item">기획전</li>
+            </ul>
             <div class="header-menu__private-menu"></div>
         </div>
     </header>
