--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/libs/reset.css">
     <link rel="stylesheet" href="./styles/global.css">
     <link rel="stylesheet" href="./styles/app.css">
+    <script src="https://kit.fontawesome.com/d69dc18532.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
 
         <div class="header-menu">
             <div class="category">
-                <button class="category__title">카테고리</button>
+                <button class="category__title"><i class="fas fa-bars"></i>카테고리</button>
                 <ul class="category-first">
                     <li></li>
                     <li></li>
