feature. header layout

--- a/app/index.html
+++ b/app/index.html
@@ -50,12 +50,15 @@
             </div>
             <div class="gubun-bar"></div>
             <ul class="top-menu">
-                <li class="top-menu__item">핫딜</li>
-                <li class="top-menu__item">베스트100</li>
-                <li class="top-menu__item">할인특가</li>
-                <li class="top-menu__item">기획전</li>
+                <li class="top-menu__btn"><a href="#">핫딜</a></li>
+                <li class="top-menu__btn"><a href="">베스트100</a></li>
+                <li class="top-menu__btn"><a href="">할인특가</a></li>
+                <li class="top-menu__btn"><a href="">기획전</a></li>
             </ul>
-            <div class="header-menu__private-menu"></div>
+            <ul class="private-menu">
+                <li class="private-menu__btn"><a href="#">로그인</a></li>
+                <li class="private-menu__btn"><a href="#">최근본상품</a></li>
+            </ul>
         </div>
     </header>
     <div class="container">
