--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,20 +11,23 @@
     <script src="https://kit.fontawesome.com/d69dc18532.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
+
 <body>
     <header>
 
         <div class="header-top">
-            <div class="title"><h1>쇼핑하우</h1></div>  
+            <div class="title">
+                <h1>쇼핑하우</h1>
+            </div>
             <div class="search">
-                <form >
+                <form>
                     <input type="text" class="search__input">
                     <button class="search__icon">🔍</button>
                 </form>
                 <ul class="search-top10">
                     <li class="search-top10__item">3. 아디다스 런닝화</li>
                 </ul>
-            </div>  
+            </div>
         </div>
 
         <div class="header-menu">
@@ -34,19 +38,19 @@
                     <li></li>
                     <li></li>
                     <li></li>
-                </ul> 
+                </ul>
                 <ul class="category-second">
                     <li></li>
                     <li></li>
                     <li></li>
                     <li></li>
-                </ul> 
+                </ul>
                 <ul class="category-third">
                     <li></li>
                     <li></li>
                     <li></li>
                     <li></li>
-                </ul> 
+                </ul>
             </div>
             <div class="gubun-bar"></div>
             <ul class="top-menu">
@@ -64,15 +68,45 @@
     <div class="container">
         <div class="promotion">
             <div class="banner">
-                <div class="best"></div>
-                <div class="planning"></div>
+                <div class="best">
+                    <a href="#" class="best__link">
+                        <img src="//shop1.daumcdn.net/shophow/sib/0_211210142533_BedHMJMFxJiJcYPqWFiZwzldCrXJHrcC"
+                            width="485" height="340" class="img_g" alt="기획전 이벤트">
+                    </a>
+                </div>
+                <div class="planning">
+                    <a href="#" target="_blank" class="planning__link"><img
+                            src="//shop2.daumcdn.net/shophow/sib/0_211202145115_cjUvJCvuztdGHrYUNDAIqoswLScKwQct"
+                            width="485" height="340" class="img_g" alt=""></a>
+                    <button class="planning__left-btn"></button>
+                    <button class="planning__right-btn"></button>
+                    <div class="planning__paging">
+                        <span></span><span></span><span></span>
+                    </div>
+                </div>
             </div>
             <div class="theme">
                 <ul class="theme-container">
-                    <li class="theme-item"></li>
-                    <li class="theme-item"></li>
-                    <li class="theme-item"></li>
-                    <li class="theme-item"></li>
+                    <li class="theme-item">
+                        <a href="#" class="theme__link">
+                            <span class="info_thumb">
+                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FR9545729074.jpg%3Fut%3D20200602010051&scode=talkgift" width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한 곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
+                    </li>
+                    <li class="theme-item">
+                        <a href="#" class="theme__link">
+                            <span class="info_thumb">
+                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FR9545729074.jpg%3Fut%3D20200602010051&scode=talkgift" width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한 곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
+                    </li>
+                    <li class="theme-item">
+                        <a href="#" class="theme__link">
+                            <span class="info_thumb">
+                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FR9545729074.jpg%3Fut%3D20200602010051&scode=talkgift" width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한 곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
+                    </li>
+                    <li class="theme-item">
+                        <a href="#" class="theme__link">
+                            <span class="info_thumb">
+                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FU15563830470.jpg%3Fut%3D20211222065245&amp;scode=talkgift" width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한 곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -111,6 +145,7 @@
 
     </div>
     <footer></footer>
-    
+
 </body>
+
 </html>
