feat. seperate global style & add hotdeal section layout

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/libs/reset.css">
-    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/_global.css">
     <link rel="stylesheet" href="./styles/app.css">
     <script src="https://kit.fontawesome.com/d69dc18532.js" crossorigin="anonymous"></script>
     <title>Document</title>
@@ -90,28 +90,58 @@
                     <li class="theme-item">
                         <a href="#" class="theme__link">
                             <span class="info_thumb">
-                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FR9545729074.jpg%3Fut%3D20200602010051&scode=talkgift" width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한 곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
+                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FR9545729074.jpg%3Fut%3D20200602010051&scode=talkgift"
+                                    width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong
+                                class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한
+                                곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
                     </li>
                     <li class="theme-item">
                         <a href="#" class="theme__link">
                             <span class="info_thumb">
-                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FR9545729074.jpg%3Fut%3D20200602010051&scode=talkgift" width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한 곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
+                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FR9545729074.jpg%3Fut%3D20200602010051&scode=talkgift"
+                                    width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong
+                                class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한
+                                곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
                     </li>
                     <li class="theme-item">
                         <a href="#" class="theme__link">
                             <span class="info_thumb">
-                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FR9545729074.jpg%3Fut%3D20200602010051&scode=talkgift" width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한 곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
+                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FR9545729074.jpg%3Fut%3D20200602010051&scode=talkgift"
+                                    width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong
+                                class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한
+                                곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
                     </li>
                     <li class="theme-item">
                         <a href="#" class="theme__link">
                             <span class="info_thumb">
-                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FU15563830470.jpg%3Fut%3D20211222065245&amp;scode=talkgift" width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한 곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
+                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FU15563830470.jpg%3Fut%3D20211222065245&amp;scode=talkgift"
+                                    width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong
+                                class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한
+                                곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
                     </li>
                 </ul>
             </div>
         </div>
 
-        <div class="hot-deal"></div>
+        <div class="hot-deal">
+            <h2 class="section-title">품절주의, 역대급 핫딜</h2>
+            <ul class="hot-deal-list">
+                <li class="hot-deal__item">
+                    <a href="" class="hot-deal__link">
+                        <span class="hot-deal__thumb">
+                            <img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20211221145844446_191895" class="hot-deal__img" alt="">
+                        </span>
+
+                        <strong class="hot-deal__title">구매1만↑우유앙빵10+10</strong>
+
+                        <span class="hot-deal__detail-price">
+                            <span class="txt-price">18,500 </span>
+                            <span class="txt-price-percent">핫딜가</span>
+                        </span>
+                    </a>
+                </li>
+            </ul>
+        </div>
         <div class="rising-keyword">
             <ul>
                 <li class="rising-keyword__item"></li>
