--- a/app/index.html
+++ b/app/index.html
@@ -89,35 +89,29 @@
                 <ul class="theme-container">
                     <li class="theme-item">
                         <a href="#" class="theme__link">
-                            <span class="info_thumb">
-                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FR9545729074.jpg%3Fut%3D20200602010051&scode=talkgift"
-                                    width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong
-                                class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한
-                                곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
+                            <span class="theme-item__info">
+                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FP15687305480.jpg%3Fut%3D20211210172757&amp;scode=talkgift" width="200" height="200" class="img_top" alt="트렌디한 구찌 지갑"></span><strong
+                                class="theme-item__title">트렌디한 구찌 지갑</strong><span class="theme-item__desc">꺼내서 자랑하고 싶은 이유</span><span class="theme-item__icon">테마</span></a>
                     </li>
                     <li class="theme-item">
                         <a href="#" class="theme__link">
-                            <span class="info_thumb">
-                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FR9545729074.jpg%3Fut%3D20200602010051&scode=talkgift"
-                                    width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong
-                                class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한
-                                곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
+                            <span class="theme-item__info">
+                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FV14651717067.jpg%3Fut%3D20210904092746&amp;scode=talkgift" width="200" height="200" class="img_top" alt="트라이앵글 브랜드전"></span><strong
+                                class="theme-item__title">트라이앵글 브랜드전</strong><span class="theme-item__desc">있으면 도움되는 조리 도구 총모음</span><span class="theme-item__icon">테마</span></a>
                     </li>
                     <li class="theme-item">
                         <a href="#" class="theme__link">
-                            <span class="info_thumb">
-                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FR9545729074.jpg%3Fut%3D20200602010051&scode=talkgift"
-                                    width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong
-                                class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한
-                                곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
+                            <span class="theme-item__info">
+                                <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FX15420477717.jpg%3Fut%3D20211116163053&amp;scode=talkgift" width="200" height="200" class="img_top" alt="작지만 강한 미니 온풍기"></span><strong
+                                class="theme-item__title">작지만 강한 미니 온풍기</strong><span class="theme-item__desc">언제 어디서든 따뜻하게</span><span class="theme-item__icon">테마</span></a>
                     </li>
                     <li class="theme-item">
                         <a href="#" class="theme__link">
-                            <span class="info_thumb">
+                            <span class="theme-item__info">
                                 <img src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FU15563830470.jpg%3Fut%3D20211222065245&amp;scode=talkgift"
                                     width="200" height="200" class="img_top" alt="자주 쓰는 종이호일 기획전"></span><strong
-                                class="tit_g">자주 쓰는 종이호일 기획전</strong><span class="txt_info">다양한 크기와 모양을 한
-                                곳에!</span><span class="ico_comm2 ico_theme">테마</span></a>
+                                class="theme-item__title">자주 쓰는 종이호일 기획전</strong><span class="theme-item__desc">다양한 크기와 모양을 한
+                                곳에!</span><span class="theme-item__icon">테마</span></a>
                     </li>
                 </ul>
             </div>
@@ -126,20 +120,6 @@
         <div class="hot-deal">
             <h2 class="section-title">품절주의, 역대급 핫딜</h2>
             <ul class="hot-deal-list">
-                <li class="hot-deal__item">
-                    <a href="" class="hot-deal__link">
-                        <span class="hot-deal__thumb">
-                            <img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20211221145844446_191895" class="hot-deal__img" alt="">
-                        </span>
-
-                        <strong class="hot-deal__title">구매1만↑우유앙빵10+10</strong>
-
-                        <span class="hot-deal__detail-price">
-                            <span class="txt-price">18,500 </span>
-                            <span class="txt-price-percent">핫딜가</span>
-                        </span>
-                    </a>
-                </li>
             </ul>
         </div>
         <div class="rising-keyword">
@@ -176,6 +156,29 @@
     </div>
     <footer></footer>
 
+    <script>
+        function makeHotDealHTML() {
+            const target = document.querySelector(".hot-deal-list");
+            const hotdealItemTpl = `
+                <li class="hot-deal__item">
+                    <a href="" class="hot-deal__link">
+                        <span class="hot-deal__thumb">
+                            <img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20211221145844446_191895" class="hot-deal__img" alt="">
+                        </span>
+
+                        <strong class="hot-deal__title">구매1만↑우유앙빵10+10</strong>
+
+                        <span class="hot-deal__detail-price">
+                            <span class="txt-price">18,500 </span>
+                            <span class="txt-price-percent">핫딜가</span>
+                        </span>
+                    </a>
+                </li>`
+
+            target.innerHTML = Array(10).fill(0).reduce( (html, item) => html+hotdealItemTpl, ``);
+        }
+        makeHotDealHTML();
+    </script>
 </body>
 
 </html>
