add component for input with top ranking goods and modify server to serve json static file

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d69dc18532.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://livejs.com/live.js"></script>
     <title>Document</title>
 </head>
 
@@ -15,12 +16,6 @@
         <div class="header-top">
             <div class="title">
                 <h1>쇼핑하우</h1>
-            </div>
-            <div class="search">
-                <form>
-                    <input type="text" class="search__input">
-                    <button class="search__icon">🔍</button>
-                </form>
             </div>
         </div>
 
