refactor: 코드 tab 사이즈 수정 및 search 폴더 삭제
search 폴더 -> headers 폴더

--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -1,214 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/build/css/style.css" />
-        <script
-            src="https://kit.fontawesome.com/d69dc18532.js"
-            crossorigin="anonymous"
-        ></script>
-        <script src="/build/bundle.js" defer></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/build/css/style.css" />
+    <script src="https://kit.fontawesome.com/d69dc18532.js" crossorigin="anonymous"></script>
+    <script src="/build/bundle.js" defer></script>
 
-        <title>Document</title>
-    </head>
+    <title>Document</title>
+  </head>
 
-    <body>
-        <header>
-            <div class="header-top">
-                <div class="title">
-                    <h1>쇼핑하우</h1>
-                </div>
-                <div class="search">
-                    <form>
-                        <input type="text" class="search__input" />
-                        <button class="search__icon">🔍</button>
-                    </form>
-                    <ul class="search-top10">
-                        <li class="search-top10__item">3. 아디다스 런닝화</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="header-menu">
-                <div class="category">
-                    <button class="category__title">
-                        <i class="fas fa-bars"></i>카테고리
-                    </button>
-                    <ul class="category-first">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                    <ul class="category-second">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                    <ul class="category-third">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                </div>
-                <div class="gubun-bar"></div>
-                <ul class="top-menu">
-                    <li class="top-menu__btn"><a href="#">핫딜</a></li>
-                    <li class="top-menu__btn"><a href="">베스트100</a></li>
-                    <li class="top-menu__btn"><a href="">할인특가</a></li>
-                    <li class="top-menu__btn"><a href="">기획전</a></li>
-                </ul>
-                <ul class="private-menu">
-                    <li class="private-menu__btn"><a href="#">로그인</a></li>
-                    <li class="private-menu__btn">
-                        <a href="#">최근본상품</a>
-                    </li>
-                </ul>
-            </div>
-        </header>
-        <div class="container">
-            <div class="promotion">
-                <div class="banner">
-                    <div class="best">
-                        <a href="#" class="best__link">
-                            <img
-                                src="//shop1.daumcdn.net/shophow/sib/0_211210142533_BedHMJMFxJiJcYPqWFiZwzldCrXJHrcC"
-                                width="485"
-                                height="340"
-                                class="img_g"
-                                alt="기획전 이벤트"
-                            />
-                        </a>
-                    </div>
-                    <div class="planning">
-                        <a href="#" target="_blank" class="planning__link"
-                            ><img
-                                src="//shop2.daumcdn.net/shophow/sib/0_211202145115_cjUvJCvuztdGHrYUNDAIqoswLScKwQct"
-                                width="485"
-                                height="340"
-                                class="img_g"
-                                alt=""
-                        /></a>
-                        <button class="planning__left-btn"></button>
-                        <button class="planning__right-btn"></button>
-                        <div class="planning__paging">
-                            <span></span><span></span><span></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="theme">
-                    <ul class="theme-container">
-                        <li class="theme-item">
-                            <a href="#" class="theme__link">
-                                <span class="theme-item__info">
-                                    <img
-                                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FP15687305480.jpg%3Fut%3D20211210172757&amp;scode=talkgift"
-                                        width="200"
-                                        height="200"
-                                        class="img_top"
-                                        alt="트렌디한 구찌 지갑" /></span
-                                ><strong class="theme-item__title"
-                                    >트렌디한 구찌 지갑</strong
-                                ><span class="theme-item__desc"
-                                    >꺼내서 자랑하고 싶은 이유</span
-                                ><span class="theme-item__icon">테마</span></a
-                            >
-                        </li>
-                        <li class="theme-item">
-                            <a href="#" class="theme__link">
-                                <span class="theme-item__info">
-                                    <img
-                                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FV14651717067.jpg%3Fut%3D20210904092746&amp;scode=talkgift"
-                                        width="200"
-                                        height="200"
-                                        class="img_top"
-                                        alt="트라이앵글 브랜드전" /></span
-                                ><strong class="theme-item__title"
-                                    >트라이앵글 브랜드전</strong
-                                ><span class="theme-item__desc"
-                                    >있으면 도움되는 조리 도구 총모음</span
-                                ><span class="theme-item__icon">테마</span></a
-                            >
-                        </li>
-                        <li class="theme-item">
-                            <a href="#" class="theme__link">
-                                <span class="theme-item__info">
-                                    <img
-                                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FX15420477717.jpg%3Fut%3D20211116163053&amp;scode=talkgift"
-                                        width="200"
-                                        height="200"
-                                        class="img_top"
-                                        alt="작지만 강한 미니 온풍기" /></span
-                                ><strong class="theme-item__title"
-                                    >작지만 강한 미니 온풍기</strong
-                                ><span class="theme-item__desc"
-                                    >언제 어디서든 따뜻하게</span
-                                ><span class="theme-item__icon">테마</span></a
-                            >
-                        </li>
-                        <li class="theme-item">
-                            <a href="#" class="theme__link">
-                                <span class="theme-item__info">
-                                    <img
-                                        src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FU15563830470.jpg%3Fut%3D20211222065245&amp;scode=talkgift"
-                                        width="200"
-                                        height="200"
-                                        class="img_top"
-                                        alt="자주 쓰는 종이호일 기획전" /></span
-                                ><strong class="theme-item__title"
-                                    >자주 쓰는 종이호일 기획전</strong
-                                ><span class="theme-item__desc"
-                                    >다양한 크기와 모양을 한 곳에!</span
-                                ><span class="theme-item__icon">테마</span></a
-                            >
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="hot-deal">
-                <h2 class="section-title">품절주의, 역대급 핫딜</h2>
-                <ul class="hot-deal-list"></ul>
-            </div>
-            <div class="rising-keyword">
-                <ul>
-                    <li class="rising-keyword__item"></li>
-                    <li class="rising-keyword__item"></li>
-                    <li class="rising-keyword__item"></li>
-                    <li class="rising-keyword__item"></li>
-                    <li class="rising-keyword__item"></li>
-                    <li class="rising-keyword__item"></li>
-                    <li class="rising-keyword__item"></li>
-                </ul>
-            </div>
-            <div class="recommendation">
-                <ul class="picked-items">
-                    <li class="picked-items__item"></li>
-                    <li class="picked-items__item"></li>
-                    <li class="picked-items__item"></li>
-                    <li class="picked-items__item"></li>
-                </ul>
-                <ul class="recommendation-items">
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                    <li class="recommendation-items__item"></li>
-                </ul>
-            </div>
+  <body>
+    <div id="app"></div>
+    <header>
+      <div class="header-top">
+        <div class="title">
+          <h1>쇼핑하우</h1>
         </div>
-        <footer></footer>
-        <script>
-            function makeHotDealHTML() {
-                const target = document.querySelector(".hot-deal-list");
-                const hotdealItemTpl = `
+        <div class="search">
+          <form>
+            <input type="text" class="search__input" />
+            <button class="search__icon">🔍</button>
+          </form>
+          <ul class="search-top10">
+            <li class="search-top10__item">3. 아디다스 런닝화</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="header-menu">
+        <div class="category">
+          <button class="category__title"><i class="fas fa-bars"></i>카테고리</button>
+          <ul class="category-first">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <ul class="category-second">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <ul class="category-third">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="gubun-bar"></div>
+        <ul class="top-menu">
+          <li class="top-menu__btn"><a href="#">핫딜</a></li>
+          <li class="top-menu__btn"><a href="">베스트100</a></li>
+          <li class="top-menu__btn"><a href="">할인특가</a></li>
+          <li class="top-menu__btn"><a href="">기획전</a></li>
+        </ul>
+        <ul class="private-menu">
+          <li class="private-menu__btn"><a href="#">로그인</a></li>
+          <li class="private-menu__btn">
+            <a href="#">최근본상품</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <div class="container">
+      <div class="promotion">
+        <div class="banner">
+          <div class="best">
+            <a href="#" class="best__link">
+              <img
+                src="//shop1.daumcdn.net/shophow/sib/0_211210142533_BedHMJMFxJiJcYPqWFiZwzldCrXJHrcC"
+                width="485"
+                height="340"
+                class="img_g"
+                alt="기획전 이벤트"
+              />
+            </a>
+          </div>
+          <div class="planning">
+            <a href="#" target="_blank" class="planning__link"
+              ><img
+                src="//shop2.daumcdn.net/shophow/sib/0_211202145115_cjUvJCvuztdGHrYUNDAIqoswLScKwQct"
+                width="485"
+                height="340"
+                class="img_g"
+                alt=""
+            /></a>
+            <button class="planning__left-btn"></button>
+            <button class="planning__right-btn"></button>
+            <div class="planning__paging"><span></span><span></span><span></span></div>
+          </div>
+        </div>
+        <div class="theme">
+          <ul class="theme-container">
+            <li class="theme-item">
+              <a href="#" class="theme__link">
+                <span class="theme-item__info">
+                  <img
+                    src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FP15687305480.jpg%3Fut%3D20211210172757&amp;scode=talkgift"
+                    width="200"
+                    height="200"
+                    class="img_top"
+                    alt="트렌디한 구찌 지갑" /></span
+                ><strong class="theme-item__title">트렌디한 구찌 지갑</strong><span class="theme-item__desc">꺼내서 자랑하고 싶은 이유</span
+                ><span class="theme-item__icon">테마</span></a
+              >
+            </li>
+            <li class="theme-item">
+              <a href="#" class="theme__link">
+                <span class="theme-item__info">
+                  <img
+                    src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop2.daumcdn.net%2Fshophow%2Fp%2FV14651717067.jpg%3Fut%3D20210904092746&amp;scode=talkgift"
+                    width="200"
+                    height="200"
+                    class="img_top"
+                    alt="트라이앵글 브랜드전" /></span
+                ><strong class="theme-item__title">트라이앵글 브랜드전</strong><span class="theme-item__desc">있으면 도움되는 조리 도구 총모음</span
+                ><span class="theme-item__icon">테마</span></a
+              >
+            </li>
+            <li class="theme-item">
+              <a href="#" class="theme__link">
+                <span class="theme-item__info">
+                  <img
+                    src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FX15420477717.jpg%3Fut%3D20211116163053&amp;scode=talkgift"
+                    width="200"
+                    height="200"
+                    class="img_top"
+                    alt="작지만 강한 미니 온풍기" /></span
+                ><strong class="theme-item__title">작지만 강한 미니 온풍기</strong><span class="theme-item__desc">언제 어디서든 따뜻하게</span
+                ><span class="theme-item__icon">테마</span></a
+              >
+            </li>
+            <li class="theme-item">
+              <a href="#" class="theme__link">
+                <span class="theme-item__info">
+                  <img
+                    src="//shop1.daumcdn.net/thumb/S318x318/?fname=http%3A%2F%2Fshop1.daumcdn.net%2Fshophow%2Fp%2FU15563830470.jpg%3Fut%3D20211222065245&amp;scode=talkgift"
+                    width="200"
+                    height="200"
+                    class="img_top"
+                    alt="자주 쓰는 종이호일 기획전" /></span
+                ><strong class="theme-item__title">자주 쓰는 종이호일 기획전</strong
+                ><span class="theme-item__desc">다양한 크기와 모양을 한 곳에!</span><span class="theme-item__icon">테마</span></a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="hot-deal">
+        <h2 class="section-title">품절주의, 역대급 핫딜</h2>
+        <ul class="hot-deal-list"></ul>
+      </div>
+      <div class="rising-keyword">
+        <ul>
+          <li class="rising-keyword__item"></li>
+          <li class="rising-keyword__item"></li>
+          <li class="rising-keyword__item"></li>
+          <li class="rising-keyword__item"></li>
+          <li class="rising-keyword__item"></li>
+          <li class="rising-keyword__item"></li>
+          <li class="rising-keyword__item"></li>
+        </ul>
+      </div>
+      <div class="recommendation">
+        <ul class="picked-items">
+          <li class="picked-items__item"></li>
+          <li class="picked-items__item"></li>
+          <li class="picked-items__item"></li>
+          <li class="picked-items__item"></li>
+        </ul>
+        <ul class="recommendation-items">
+          <li class="recommendation-items__item"></li>
+          <li class="recommendation-items__item"></li>
+          <li class="recommendation-items__item"></li>
+          <li class="recommendation-items__item"></li>
+          <li class="recommendation-items__item"></li>
+          <li class="recommendation-items__item"></li>
+          <li class="recommendation-items__item"></li>
+          <li class="recommendation-items__item"></li>
+        </ul>
+      </div>
+    </div>
+    <footer></footer>
+    <script>
+      function makeHotDealHTML() {
+        const target = document.querySelector(".hot-deal-list");
+        const hotdealItemTpl = `
                     <li class="hot-deal__item">
                         <a href="" class="hot-deal__link">
                             <span class="hot-deal__thumb">
@@ -222,11 +204,11 @@
                         </a>
                     </li>`;
 
-                target.innerHTML = Array(10)
-                    .fill(0)
-                    .reduce((html, item) => html + hotdealItemTpl, ``);
-            }
-            makeHotDealHTML();
-        </script>
-    </body>
+        target.innerHTML = Array(10)
+          .fill(0)
+          .reduce((html, item) => html + hotdealItemTpl, ``);
+      }
+      makeHotDealHTML();
+    </script>
+  </body>
 </html>
