--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
       src="https://kit.fontawesome.com/d69dc18532.js"
       crossorigin="anonymous"
     ></script>
+    <script type="text/javascript" src="https://livejs.com/live.js"></script>
+    <script defer type="text/javascript" src="app.js"></script>
     <title>Document</title>
   </head>
 
@@ -199,31 +201,5 @@
       </div>
     </div>
     <footer></footer>
-
-    <script>
-      function makeHotDealHTML() {
-        const target = document.querySelector(".hot-deal-list");
-        const hotdealItemTpl = `
-                <li class="hot-deal__item">
-                    <a href="" class="hot-deal__link">
-                        <span class="hot-deal__thumb">
-                            <img src="//shop2.daumcdn.net/shophow/c/image/content/set/ad8255/20211221145844446_191895" class="hot-deal__img" alt="">
-                        </span>
-
-                        <strong class="hot-deal__title">구매1만↑우유앙빵10+10</strong>
-
-                        <span class="hot-deal__detail-price">
-                            <span class="txt-price">18,500 </span>
-                            <span class="txt-price-percent">핫딜가</span>
-                        </span>
-                    </a>
-                </li>`;
-
-        target.innerHTML = Array(10)
-          .fill(0)
-          .reduce((html, item) => html + hotdealItemTpl, ``);
-      }
-      makeHotDealHTML();
-    </script>
   </body>
 </html>
