feat: htmlWebpackPlugin 기능 오류 수정
node server 의 public 파일 경로를 설정해주지 않아 플러그인으로 추가된 script, link 파일이 제대로 로드되지 않았던 문제.
-> static 파일 경로 설정해주고 webpack 의 build 경로 수정

--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/build/css/style.css" />
     <script src="https://kit.fontawesome.com/d69dc18532.js" crossorigin="anonymous"></script>
-    <script src="/build/bundle.js" defer></script>
 
-    <title>Document</title>
+    <title>Shopping How</title>
   </head>
 
   <body>
